# red

./: Cargo.toml  Dockerfile  README.md  config.yaml
.gitea/workflows/: build.yml  main.yml  pr-check.yml  release.yml
scripts/: bump-version.sh  check.sh
src/: countdowns.rs  main.rs  mc.rs  server.rs  systems.rs
